--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Web3 Hub</title> 
+        <script defer src="https://web3umami.vercel.app/script.js" data-website-id="ba5b458c-29bd-40fd-bb18-e4b88100ae1a"></script>
       </head>
       <body>
         <div id="root"></div>
